--- a/Assign2_Tan_Fredrich_101318950/Assign2_Tan_Fredrich_101318950/Base.lproj/Main.storyboard
+++ b/Assign2_Tan_Fredrich_101318950/Assign2_Tan_Fredrich_101318950/Base.lproj/Main.storyboard
@@ -47,6 +47,17 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="dcN-5T-KLn">
+                                <rect key="frame" x="129" y="87" width="135" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="Price ↑ "/>
+                                    <segment title="Price ↓ "/>
+                                </segments>
+                                <connections>
+                                    <action selector="sortSegmentChanged:" destination="Bcb-43-wxd" eventType="valueChanged" id="M7T-Ms-QT9"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="kVb-0b-pMX"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
